ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType/input.ts.stderr
error[1005]: Expected ','
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType/input.ts:6:31
  |
6 | class C2 extends { foo: string; } { } // error
  |                               ^

